--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "watch": "watchify client/app.js -o public/bundle.js -v",
     "browserify": "browserify client/app.js | uglifyjs > public/bundle.js",
+    "build-css": "node-sass --include-path scss scss/main.scss   public/css/main.css",
+    "watch-css": "nodemon -e scss -x \"npm run build-css\"",
     "test": "NODE_ENV=test mocha",
     "build": "npm run browserify ",
-    "start": "npm run watch & NODE_ENV=development node server/index.js"
+    "start": "npm run watch & npm run watch-css & NODE_ENV=development node server/index.js"
   },
   "author": "",
   "license": "",
@@ -33,6 +35,7 @@
     "babelify": "^7.3.0",
     "browserify": "^13.1.1",
     "mocha": "^3.2.0",
+    "node-sass": "^3.13.1",
     "reactify": "^1.1.1",
     "sinon": "^1.17.6",
     "tmp": "0.0.31",
