--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   "author": "",
   "license": "",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "bookshelf": "^0.10.2",
+    "cookie-session": "^2.0.0-alpha.2",
     "exif": "^0.6.0",
     "express": "^4.14.0",
+    "express-session": "^1.14.2",
     "fs-extra": "^1.0.0",
     "image-size": "^0.5.0",
     "jquery": "^3.1.1",
