--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^15.4.1",
     "react-cookie": "^1.0.4",
     "react-dom": "^15.4.1",
+    "react-router": "^3.0.0",
     "sharp": "^0.16.2",
     "sqlite3": "^3.1.8"
   },
