--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   "author": "",
   "license": "",
   "dependencies": {
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "body-parser": "^1.15.2",
     "bookshelf": "^0.10.2",
     "cookie-session": "^2.0.0-alpha.2",
@@ -33,7 +37,8 @@
     "react-dom": "^15.4.1",
     "react-router": "^3.0.0",
     "sharp": "^0.16.2",
-    "sqlite3": "^3.1.8"
+    "sqlite3": "^3.1.8",
+    "webpack": "^1.14.0"
   },
   "devDependencies": {
     "babelify": "^7.3.0",
