--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "./bin/watch-javascript",
-    "browserify": "./bin/build-javascript",
-    "build-css": "./bin/build-css",
+    "dev": "./bin/dev",
+    "watch": "./bin/watch",
+    "watch-javascript": "./bin/watch-javascript",
     "watch-css": "./bin/watch-css",
+    "build": "./bin/build",
+    "build-javascript": "./bin/build-javascript",
+    "build-css": "./bin/build-css",
     "test": "NODE_ENV=test mocha",
-    "build": "npm run browserify ",
     "start": "./bin/start"
   },
   "author": "",
@@ -37,8 +39,7 @@
     "react-dom": "^15.4.1",
     "react-router": "^3.0.0",
     "sharp": "^0.16.2",
-    "sqlite3": "^3.1.8",
-    "webpack": "^1.14.0"
+    "sqlite3": "^3.1.8"
   },
   "devDependencies": {
     "babelify": "^7.3.0",
@@ -49,12 +50,7 @@
     "sinon": "^1.17.6",
     "tmp": "0.0.31",
     "uglify-js": "^2.7.5",
-    "watchify": "^3.7.0"
-  },
-  "browserify": {
-    "transform": [
-      "reactify",
-      "babelify"
-    ]
+    "watchify": "^3.7.0",
+    "webpack": "^1.14.0"
   }
 }
