--- a/package.json
+++ b/package.json
@@ -17,10 +17,6 @@
   "author": "",
   "license": "",
   "dependencies": {
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
     "body-parser": "^1.15.2",
     "bookshelf": "^0.10.2",
     "cookie-session": "^2.0.0-alpha.2",
@@ -42,15 +38,15 @@
     "sqlite3": "^3.1.8"
   },
   "devDependencies": {
-    "babelify": "^7.3.0",
-    "browserify": "^13.1.1",
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "mocha": "^3.2.0",
     "node-sass": "^3.13.1",
-    "reactify": "^1.1.1",
+    "nodemon": "^1.11.0",
     "sinon": "^1.17.6",
     "tmp": "0.0.31",
-    "uglify-js": "^2.7.5",
-    "watchify": "^3.7.0",
     "webpack": "^1.14.0"
   }
 }
