--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "bookshelf": "^0.10.2",
-    "cookie-session": "^2.0.0-alpha.2",
+    "connect-redis": "^3.2.0",
     "exif": "^0.6.0",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
