--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "./bin/build",
     "build-javascript": "./bin/build-javascript",
     "build-css": "./bin/build-css",
+    "build-dll": "webpack --config=webpack.dll.js",
     "test": "NODE_ENV=test mocha",
     "start": "./bin/start"
   },
