--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,6 @@ public/bundle.js
 public/css/*.css
 public/javascript/client.js
 public/javascript/client.js.map
+public/vendor/javascript/vendor-manifest.json
+public/vendor/javascript/dll.vendor.js
 *.log
