--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build-css": "./bin/build-css",
     "build-dll": "webpack --config=webpack.dll.js",
     "test": "NODE_ENV=test mocha",
-    "start": "./bin/start"
+    "start": "./bin/start",
+    "build:live": "nodemon --exec ./node_modules/.bin/ts-node -- ./server/index.ts"
   },
   "author": "",
   "license": "",
@@ -39,6 +40,8 @@
     "sqlite3": "^3.1.8"
   },
   "devDependencies": {
+    "@types/express": "^4.0.36",
+    "@types/node": "^8.0.17",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
@@ -48,6 +51,9 @@
     "nodemon": "^1.11.0",
     "sinon": "^1.17.6",
     "tmp": "0.0.31",
+    "ts-node": "^3.3.0",
+    "tslint": "^5.5.0",
+    "typescript": "^2.4.2",
     "webpack": "^1.14.0"
   }
 }
