--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "watch-css": "./bin/watch-css",
     "build": "./bin/build",
     "build-css": "./bin/build-css",
-    "build-dll": "webpack --config=webpack.dll.js",
     "test": "NODE_ENV=test mocha",
     "start": "./bin/start",
     "build:live": "nodemon --exec ./node_modules/.bin/ts-node -- ./server/index.ts",
     "build:static": "node bin/copyStaticAssets.js",
     "build:css": "./bin/build-css",
     "build:server": "tsc",
+    "build:dll": "webpack --config=webpack.dll.js",
     "build:client": "./bin/build-javascript"
   },
   "author": "",
