--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
             "src/types/*"
         ]
     },
-    "strict": false
+    "strict": false,
+    "jsx": "react"
   },
   "include": [
     "src/**/*"
