--- a/package.json
+++ b/package.json
@@ -5,19 +5,20 @@
   "main": "index.js",
   "scripts": {
     "dev": "./bin/dev",
+
     "watch": "./bin/watch",
-    "watch-javascript": "./bin/watch-javascript",
-    "watch-css": "./bin/watch-css",
+    "watch:css": "./bin/watch-css",
+    "watch:client": "./bin/watch-javascript",
+    "watch:server": "tsc -w",
+
     "build": "./bin/build",
-    "build-css": "./bin/build-css",
-    "test": "NODE_ENV=test mocha",
-    "start": "./bin/start",
-    "build:live": "nodemon --exec ./node_modules/.bin/ts-node -- ./server/index.ts",
     "build:static": "node bin/copyStaticAssets.js",
     "build:css": "./bin/build-css",
     "build:server": "tsc",
     "build:dll": "webpack --config=webpack.dll.js",
-    "build:client": "./bin/build-javascript"
+    "build:client": "./bin/build-javascript",
+
+    "test": "NODE_ENV=test mocha"
   },
   "author": "",
   "license": "",
