--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
     "build:dll": "webpack --config=webpack.dll.js",
     "build:client": "./bin/build-javascript",
 
+    "lint": "./bin/lint",
+
+    "start": "./dist/index.js",
+
+    "clean": "node bin/clean.js",
+
     "test": "NODE_ENV=test mocha"
   },
   "author": "",
