--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "allowJs": true,
     "paths": {
         "*": [
-            "node_modules/@types/*",
+            "node_modules/@types/**",
             "src/types/*"
         ]
     },
