--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "sqlite3": "^3.1.8"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.16.4",
     "@types/express": "^4.0.36",
     "@types/express-session": "^1.15.2",
     "@types/node": "^8.0.17",
