--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
   },
   "devDependencies": {
     "@types/body-parser": "^1.16.4",
+    "@types/bookshelf": "^0.9.4",
     "@types/express": "^4.0.36",
     "@types/express-session": "^1.15.2",
+    "@types/knex": "0.0.57",
     "@types/node": "^8.0.17",
     "awesome-typescript-loader": "^3.2.2",
     "babel-core": "^6.21.0",
