--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-redux": "^5.0.6",
     "react-router": "^3.0.0",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "sharp": "^0.16.2",
     "sqlite3": "^3.1.8"
   },
