--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "react": "^15.6.1",
     "react-cookie": "^1.0.4",
     "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
     "react-router": "^3.0.0",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "sharp": "^0.16.2",
     "sqlite3": "^3.1.8"
   },
@@ -52,6 +55,7 @@
     "@types/node": "^8.0.17",
     "@types/react": "^16.0.2",
     "@types/react-dom": "^15.5.1",
+    "@types/redux": "^3.6.0",
     "awesome-typescript-loader": "^3.2.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
