--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "author": "",
   "license": "",
   "dependencies": {
+    "archiver": "^2.0.3",
     "body-parser": "^1.15.2",
     "bookshelf": "^0.10.4",
     "connect-redis": "^3.2.0",
