--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "image-size": "^0.5.0",
     "jquery": "^3.1.1",
     "knex": "^0.13.0",
+    "lozad": "0.0.3",
     "moment": "^2.17.0",
     "multer": "^1.2.0",
     "node-jsx": "^0.13.3",
