--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "archiver": "^2.0.3",
     "body-parser": "^1.15.2",
     "bookshelf": "^0.10.4",
+    "commonmark": "^0.28.1",
     "connect-redis": "^3.2.0",
     "exif": "^0.6.0",
     "express": "^4.14.0",
@@ -51,6 +52,7 @@
   "devDependencies": {
     "@types/body-parser": "^1.16.4",
     "@types/bookshelf": "^0.9.4",
+    "@types/commonmark": "^0.27.0",
     "@types/express": "^4.0.36",
     "@types/express-session": "^1.15.2",
     "@types/knex": "0.0.57",
