--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/node": "^8.0.17",
     "@types/react": "^16.0.2",
     "@types/react-dom": "^15.5.1",
+    "@types/redux": "^3.6.0",
     "awesome-typescript-loader": "^3.2.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
